# AutoDev-Crew

./: .env.example  .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: update_space.yml
docs/: ADAPTIVE_GENERATION_GUIDE.md  ARCHITECTURE.md  BLOG_POST_DRAFT.md  LINKEDIN_POST.md  PORTFOLIO_BRIEF.md
examples/: STRESS_TEST_MATRIX.md  example_manifest.json
examples/requirements/: abacus_practice_generator_requirements.md  appointment_scheduler_requirements.md  asset_maintenance_requirements.md  attendance_tracker_requirements.md  bug_tracker_requirements.md  clinic_test_booking_requirements.md  coconut_oil_batch_tracker_requirements.md  content_calendar_requirements.md  course_enrollment_requirements.md  crm_lead_tracker_requirements.md  customer_feedback_analyzer_requirements.md  daily_work_log_requirements.md  document_template_generator_requirements.md  donation_tracker_requirements.md  event_registration_requirements.md  fundraising_campaign_requirements.md  gym_membership_requirements.md  habit_tracker_requirements.md  helpdesk_sla_tracker_requirements.md  hr_leave_tracker_requirements.md  insurance_policy_tracker_requirements.md  inventory_manager_requirements.md  invoice_manager_requirements.md  job_application_tracker_requirements.md  legal_case_tracker_requirements.md  lesson_plan_manager_requirements.md  library_manager_requirements.md  loan_repayment_tracker_requirements.md  manufacturing_job_card_requirements.md  meal_planner_requirements.md  meeting_action_tracker_requirements.md  okr_tracker_requirements.md  (+29 more)
(+9 files in other folders)
